--- a/index.html
+++ b/index.html
@@ -1,94 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
+<!-- InsideEARTH, InsideEARTH 21xx, InsideEARTH 2140, InsideEARTH 2150, InsideEARTH 2160, InsideEARTH 2170 -->
+<!-- Earth 2140 , Earth 21xx, Earth 2150 , Earth 2160 , Earth 2170  -->
+<!-- Earth Wiki, Earth 21xx Wiki, Earth 2140 Wiki, Earth 2150 Wiki, Earth 2160 Wiki, Earth 2170 Wiki -->
+<!-- Earth 2140 Multiplayer, Earth 21xx Multiplayer, Earth 2150 Multiplayer, Earth 2160 Multiplayer, Earth 2170 Multiplayer -->
+<!-- Earth 2140 Singleplayer, Earth 21xx Singleplayer, Earth 2150 Singleplayer, Earth 2160 Singleplayer, Earth 2170 Singleplayer -->
+<!-- Patch, Update, Fix , Mod, Maps, Story, Manuals, configuration, applications, Guide , EarthNet , ports, Speedrun, tournaments, SDK --><html>
 <head>
-    <title>InsideEarth</title>
-	<link rel="icon" type="image/png" href="http://www.insideearth.info/images/favicon.png">
-	<meta name="description" content="InsideEARTH is dedicated to bringing you the latest in all things in the Earth 21xx Universe." />
-	<meta name="keywords" content="InsideEARTH, Earth 21xx, Earth 2140, Earth 2150, Earth 2150: Trilogy, Earth 2150: Escape from the Blue Planet, Earth 2150: The Moon Project, Earth 2150: Lost Souls, Earth 2160, Earth 2170, Earth Remake, Wiki, Forum, Maps, Mods, patch, download, fix, guide, earthnet, Community" />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="css/fonts/earth-orbiter/specimen_files/specimen_stylesheet.css" type="text/css" charset="utf-8" />
-	<link rel="stylesheet" href="http://www.insideearth.info/css/fonts/earth-orbiter/stylesheets.css" type="text/css" charset="utf-8" />
-	<style>
-* {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  font-family: 'earth_orbiterregular';
-  font-size: 17px;
-}
-
-/* Style the video: 100% width and height to cover the entire window */
-#myVideo {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
-}
-
-/* Add some content at the bottom of the video/page */
-.content {
-  position: fixed;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
-  color: #f1f1f1;
-  width: 100%;
-  padding: 20px;
-}
-
-/* Style the button used to pause/play the video */
-#myBtn {
-  width: 100px;
-  font-size: 9px;
-  padding: 10px;
-  border: none;
-  background: #000;
-  color: #fff;
-  cursor: pointer;
-}
-
-#myBtn:hover {
-  background: #ddd;
-  color: black;
+<title>EARTH 2150</title>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+</head>
+<style>
+.earth {
+  width: 350px;
+  height: 200px;
 }
 </style>
-</head>
-<body>
-
-<!-- The video -->
-<video autoplay muted loop id="myVideo">
-  <source src="Earth2150-Official Trailer-1999-HighQuality.mp4" type="video/mp4">
-  Your browser does not support HTML5 video.
-</video>
-
-<!-- Optional: some overlay text to describe the video -->
-<div class="content">
-  <center><strong><a href="http://www.insideearth.info/menu.html">InsideEarth</a></strong></center>
-<!--   <p><center>Knowledge base for the Earth Series, brought to you by InsideEarth.</center></p> -->
-  <!-- Use a button to pause/play the video with JavaScript -->
-  <center><button id="myBtn" onclick="myFunction()">Pause</button></center>
-</div>
-
-<script>
-// Get the video
-var video = document.getElementById("myVideo");
-
-// Get the button
-var btn = document.getElementById("myBtn");
-
-// Pause and play the video, and change the button text
-function myFunction() {
-  if (video.paused) {
-    video.play();
-    btn.innerHTML = "Pause";
-  } else {
-    video.pause();
-    btn.innerHTML = "Play";
-  }
-}
-</script>
-
+<body bgcolor="#000000" text="#CCCCCC" link="#C60010" vlink="#6666FF" alink="#FF0000")">
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p style="text-align: center;"><a href="https://insideearth2140.github.io/"><img src="images\E2140Logo.jpg" class="earth" alt="" /><a href="https://insideearth2150.github.io/"><img src="images\Earth-2150-Trilogy.png" class="earth" alt="" /><a href="https://insideearth2160.github.io/"><img src="images\E2160Logo.jpg" class="earth" alt="" /></p>
 </body>
 </html>
