--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   height: 200px;
 }
 </style>
-<body bgcolor="#000000" text="#CCCCCC" link="#C60010" vlink="#6666FF" alink="#FF0000")">
+<body bgcolor="#5b5b5b" text="#CCCCCC" link="#C60010" vlink="#6666FF" alink="#FF0000")">
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
